@@ -2,14 +2,15 @@ package data_access;
 
 import entity.User;
 import entity.UserFactory;
+import use_case.clear_users.ClearUserDataAccessInterface;
+import use_case.login.LoginUserDataAccessInterface;
+import use_case.signup.SignupUserDataAccessInterface;
 
 import java.io.*;
 import java.time.LocalDateTime;
-import java.util.HashMap;
-import java.util.LinkedHashMap;
-import java.util.Map;
+import java.util.*;
 
-public class FileUserDataAccessObject implements UserSignupDataAccessInterface {
+public class FileUserDataAccessObject implements SignupUserDataAccessInterface, LoginUserDataAccessInterface, ClearUserDataAccessInterface {
 
     private final File csvFile;
 
@@ -34,7 +35,7 @@ public class FileUserDataAccessObject implements UserSignupDataAccessInterface {
             try (BufferedReader reader = new BufferedReader(new FileReader(csvFile))) {
                 String header = reader.readLine();
 
-                // TODO clean this up by creating a new Exception subclass and handling it in the UI.
+                // For later: clean this up by creating a new Exception subclass and handling it in the UI.
                 assert header.equals("username,password,creation_time");
 
                 String row;
@@ -57,6 +58,19 @@ public class FileUserDataAccessObject implements UserSignupDataAccessInterface {
         this.save();
     }
 
+    @Override
+    public ArrayList<String> clear() {
+        ArrayList<String> user = new ArrayList<String>(accounts.keySet());
+        accounts.clear();
+        save();
+        return user;
+    }
+
+    @Override
+    public User get(String username) {
+        return accounts.get(username);
+    }
+
     private void save() {
         BufferedWriter writer;
         try {
@@ -65,7 +79,7 @@ public class FileUserDataAccessObject implements UserSignupDataAccessInterface {
             writer.newLine();
 
             for (User user : accounts.values()) {
-                String line = "%s,%s,%s".formatted(
+                String line = String.format("%s,%s,%s",
                         user.getName(), user.getPassword(), user.getCreationTime());
                 writer.write(line);
                 writer.newLine();
